<resources>
    <string name="app_name">Cebanc Tortillas</string>
    <string name="Nombre">Nombre:</string>
    <string name="IntNombre">Introduce tu nombre</string>
    <string name="Direccion">Dirección:</string>
    <string name="Telefono">Telefono:</string>
    <string name="IntTelefono">Introduce tu teléfono</string>
    <string name="IntDireccion">Introduce tu dirección</string>
    <string name="Titulo">Introduce tus Datos!</string>
    <string name="Salir">Salir</string>
    <string name="Siguiente">Siguiente</string>
    <string name="aniadir">Añadir</string>
    <string name="cantidad">Cantidad:</string>
    <string name="EspecificarCantidad">Especifica la cantidad</string>
    <string name="tamanio">Tamaño:</string>
    <string name="TipoHuevo">Tipo de huevos:</string>
    <string name="VariedadTortilla">Variedad de tortilla:</string>
    <string name="Atras">Atras</string>
    <string name="Importe">Importe</string>

    <string-array name="Tipos">
        <item>Bebida</item>
        <item>Tortilla</item>
    </string-array>

    <string-array name="Tamanios">
        <item>Individual </item>
        <item>Familiar +5€</item>
    </string-array>

    <string-array name="TipoHuevos">
        <item>Granja </item>
        <item>Campero +2€</item>
        <item>Ecologico +3€</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="Resumen">Resumen del pedido</string>
    <string name="bebidas">¿Que bebidas deseas tomar?</string>
    <string name="Concepto">Concepto:</string>
    <string name="precio">Precio en €:</string>
    <string name="Borrar">Borrar</string>
    <string name="Finalizar">Finalizar Pedido</string>
    <string name="btnInicio">Haz Tu Pedido</string>
    <string name="btnInfo">Info</string>
    <string name="btnLlamar">Llamar</string>
    <string name="Tortillaka47">Cebanc Tortillas</string>
    <string name="btnSalir">Salir</string>
    <string name="aviso">¿Desea borrar el producto seleccionado?</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="precioTotal">Precio Total</string>
    <string name="CancelarPedido">¿Estas seguro que desea volver a la pestaña anterior y cancelar el pedido?</string>
    <string name="compraFinalizada">¡Se ha finalizado la compra con exito!</string>
    <string name="seEstaFinalizando">Se esta finalizando el pedido...</string>
    <string name="BuscarCliente">Buscar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Login">Login</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="admin">Admin</string>
    <string name="NuevoProducto">Nuevo Producto</string>
    <string name="articuloID">ArticuloID</string>
    <string name="Tipo">Tipo:</string>
    <string name="insertar">Insertar</string>
</resources>
