<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.hibryd.pedidostortillas.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="72dp">

        <TextView
            android:text="@string/Titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtTitulo"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/Nombre"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtNombre"
            android:layout_weight="0.63"
            android:textAlignment="gravity"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/IntNombre"
            android:ems="10"
            android:id="@+id/edtNombre"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/Direccion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtDireccion"
            android:layout_weight="0.48"
            android:textAlignment="gravity"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/IntDireccion"
            android:ems="10"
            android:id="@+id/edtDireccion"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/Telefono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/txtTelefono"
            android:layout_weight="0.55"
            android:textAlignment="gravity"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/IntTelefono"
            android:ems="10"
            android:id="@+id/edtTelefono"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?android:buttonBarStyle">

        <Button
            android:text="@string/Atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSalir1"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:text="@string/Siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SiguienteDatos"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>
</LinearLayout>
