<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombre"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="Usuario"
        android:ems="10"
        android:id="@+id/edtUsuario" />

    <TextView
        android:text="@string/Contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtcontra"
        android:textSize="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Contraseña"
        android:id="@+id/edtContrasenia" />

    <Button
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEntrar"
        style="@style/Widget.AppCompat.Button.Colored"/>


</LinearLayout>