<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark">

    <TextView
        android:text="@string/aviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAviso"
        android:gravity="center"
        android:textColor="@color/white"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelarBorrar"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAceptarBorrar"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>