<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/darkgrey">

    <TextView
        android:text="@string/CancelarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNoCancelarPedido"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle" />

        <Button
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSiCancelarPedido"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>