<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/Resumen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtResumen"
                    android:gravity="center"
                    android:textSize="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/Concepto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/concepto"
                    android:layout_weight="3" />



                <TextView
                    android:text="@string/cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cantidad"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/precio"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:scrollbars="vertical">

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id = "@+id/lstNombres"
                    android:layout_weight="0.8"
                    android:longClickable="true"
                    android:scrollbars="none"/>


                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id = "@+id/lstCantidades"
                    android:layout_weight="1"
                    android:scrollbars="none"/>

                <ListView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id = "@+id/lstPreciosTotales"
                    android:layout_weight="1"
                    android:scrollbars="none"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtRegalo" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/Atras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAtrasResumen"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Button
                    android:text="@string/Finalizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnfinalizarPedido"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</LinearLayout>