<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Titulo"
        android:text="@string/bebidas"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:text="Refresco de cola 1,50€"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ckbCola"
                android:textSize="10dp"/>

            <CheckBox
                android:text="Refresco de limon 1,50€"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ckbLimon"
                android:textSize="10dp"/>

            <CheckBox
                android:text="Refresco de naranja 1,50€"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ckbNaranja"
                android:textSize="10dp"/>

            <CheckBox
                android:text="Nestea 2€"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ckbNestea"
                android:textSize="10dp"/>

            <CheckBox
                android:text="Cerveza 2€"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ckbCerveza"
                android:textSize="10dp"/>

            <CheckBox
                android:text="Agua 1€"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ckbAgua"
                android:textSize="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadCola"
                android:hint="@string/EspecificarCantidad"
                android:textSize="9dp" />

            <EditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadLimon"
                android:layout_width="match_parent"
                android:hint="@string/EspecificarCantidad"
                android:textSize="9dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadnaranja"
                android:hint="@string/EspecificarCantidad"
                android:textSize="9dp"/>

            <EditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadNestea"
                android:layout_weight="0.00"
                android:layout_width="match_parent"
                android:hint="@string/EspecificarCantidad"
                android:textSize="9dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadCerveza"
                android:hint="@string/EspecificarCantidad"
                android:textSize="9dp"/>

            <EditText
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidadAgua"
                android:layout_width="match_parent"
                android:hint="@string/EspecificarCantidad"
                android:textSize="9dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:text="precioTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_weight="0.20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblPrecioTotal"
            android:layout_weight="1"
            android:text="0" />

        <Button android:text="@string/Siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSiguiente3"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>